--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <title>Blog Codelândia</title>
 </head>
 <body>
+  <section class="header-bg">
+    <header class="header">
+      <div class="header-texto">
+        <h1>Codelândia</h1>
+        <p>blog</p>
+      </div>
+      <div class="header-input">
+        <label for="pesquisa"><img src="imgs/pesquisa.svg" alt="" width="23" height="23"></label>
+        <input type="text" id="pesquisa" name="pesquisa" placeholder="Pesquisar no blog">
+      </div>
+    </header>
+  </section>
 
+  <main>
+    
+  </main>
 
 </body>
 </html>
