--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
 
   <title>Blog Codelândia</title>
 </head>
+
 <body>
   <section class="header-bg">
     <header class="header">
@@ -23,9 +25,49 @@
     </header>
   </section>
 
-  <main>
-    
-  </main>
+  <section class="main-bg">
+    <main class="main">
+      <ul class="main-posts">
+        <li>
+          <div class="header-post">
+            <span>02 de jul, 2022</span>
+            <img src="imgs/like.svg" alt="like" width="25" height="25">
+          </div>
+          <h2>Agora é oficial: o Windows 11 está vindo</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum auctor est. Nam vitae
+            finibus ante. Duis lobortis tellus vel diam fringilla, eu ullamcorper ex iaculis.</p>
+        </li>
+        <li>
+          <div class="header-post">
+            <span>02 de jul, 2022</span>
+            <img src="imgs/like.svg" alt="like" width="25" height="25">
+          </div>
+          <h2>Tim Berners-Lee vai leiloar código-fonte da web</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum auctor est. Nam vitae
+            finibus ante. Duis lobortis tellus vel diam fringilla, eu ullamcorper ex iaculis. Praesent et auctor justo.
+            Vestibulum nisl orci, lacinia venenatis leo sit amet, pulvinar tincidunt risus. Phasellus nisl dui, cursus a
+            lectus et, interdum ullamcorper libero.</p>
+        </li>
+        <li>
+          <div class="header-post">
+            <span>02 de jul, 2022</span>
+            <img src="imgs/like.svg" alt="like" width="25" height="25">
+          </div>
+          <h2>Tem Firefox novo no pedaço e você vai querer migrar</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum auctor est.</p>
+        </li>
+        <li>
+          <div class="header-post">
+            <span>02 de jul, 2022</span>
+            <img src="imgs/like.svg" alt="like" width="25" height="25">
+          </div>
+          <h2>John McAfee, criador do antivírus McAfee, morre</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum auctor est. .</p>
+        </li>
+      </ul>
+    </main>
+  </section>
 
 </body>
+
 </html>
